# Pixeladed_mcpd

./: .gitignore  README.md  cli.spec  pyproject.toml
mcpd/: builder.py  cli.py  config.py  executor.py  registry.py  state.py
mcpd/state/: __init__.py  file_state.py  state.py
