[tool.poetry]
name = "mcpd"
version = "0.1.0"
description = ""
authors = ["Minh Le <vietminhle98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"
click = "^8.1.7"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
